--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.11.5",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -17,9 +19,11 @@
     "eslint-config-next": "13.4.4",
     "lucide-react": "^0.221.0",
     "next": "13.4.4",
+    "next-sanity": "^4.3.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanity": "^3.11.5",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
