--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "lucide-react": "^0.221.0",
     "next": "13.4.4",
     "next-sanity": "^4.3.3",
@@ -24,7 +26,9 @@
     "react-dom": "18.2.0",
     "sanity": "^3.11.5",
     "swiper": "^9.3.2",
+    "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
   },
