--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.0-rc20",
     "lucide-react": "^0.221.0",
     "next": "13.4.18",
     "next-sanity": "^5.5.5",
