--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^2.30.0",
     "embla-carousel-autoplay": "^8.0.0-rc20",
     "embla-carousel-react": "^8.0.0-rc20",
+    "framer-motion": "^11.0.3",
     "lucide-react": "^0.221.0",
     "next": "13.4.18",
     "next-sanity": "^5.5.5",
